Docker image created to run python script and dbt project

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,6 @@ config.py
 __pycache__/
 logs/
 stock_analytics/.gitignore
+stock_analytics/profiles.yml
+stock_analytics/stockanalytics-487517-1bbcbb49beca.json
+stock_analytics/.user.yml
